force-app/main/default/objects/Patient__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF( ISBLANK( Birth_Date__c ) , null, FLOOR((TODAY() -  Birth_Date__c )/365.25))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>