force-app/main/default/objects/Patient__c/fields/Health_Factors__c.field-meta.xml
<CustomField>
    <fullName>Health_Factors__c</fullName>
    <label>Health Factors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>