force-app/main/default/objects/Patient__c/fields/Lifestyle_factors__c.field-meta.xml
<CustomField>
    <fullName>Lifestyle_factors__c</fullName>
    <label>Lifestyle factors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>